--- a/index.html
+++ b/index.html
@@ -47,6 +47,78 @@
             </div>
         </div>
     </header>
+    <main class="main">
+        <div class="hero">
+            <div class="main-content">
+                <div class="body">
+                    <div class="media-block">
+                        <img src="./assets/img/guy-lesson1.jpg" alt="Learn without limits and spread knowledge."
+                            class="img">
+
+                        <div class="hero-summary">
+                            <!-- -----item1----- -->
+                            <div class="item">
+                                <div class="icon">
+                                    <img src="./assets/icon/Orion_page.svg" alt="">
+                                </div>
+
+                                <div class="info">
+                                    <p class="label">20 Courses</p>
+                                    <p class="text">UI/UX Design</p>
+                                </div>
+                            </div>
+
+                            <!-- -----item2----- -->
+                            <div class="item">
+                                <div class="icon icon2">
+                                    <img src="./assets/icon/Orion_code-window.svg" alt="">
+                                </div>
+
+                                <div class="info">
+                                    <p class="label">20 Courses</p>
+                                    <p class="text">Development</p>
+                                </div>
+                            </div>
+
+                            <!-- -----item3----- -->
+                            <div class="item">
+                                <div class="icon icon3">
+                                    <img src="./assets/icon/Orion_megaphone.svg" alt="">
+                                </div>
+
+                                <div class="info">
+                                    <p class="lable">30 Courses</p>
+                                    <p class="text">Marketing</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="content-block">
+                        <h1 class="heading">
+                            Learn without limits and spread knowledge.
+                        </h1>
+                        <p class="decription">Build new skills for that “this is my year” feeling with courses,
+                            certificates,
+                            and degrees from world-class universities and companies.
+                        </p>
+                        <div class="cta-group">
+                            <a href="./assets/icon/Play.svg" class="btn hero-see-course">See Courses</a>
+                            <button>
+                                <div class="img"></div>
+                                <span>Watch Video</span>
+                            </button>
+                        </div>
+                        <p class="decription">Recent engagement</p>
+                        <p>
+                            <strong>50K</strong> Students
+                            <strong>70+</strong> Courses
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
