--- a/index.html
+++ b/index.html
@@ -98,22 +98,20 @@
                         <h1 class="heading">
                             Learn without limits and spread knowledge.
                         </h1>
-                        <p class="decription">Build new skills for that “this is my year” feeling with courses,
-                            certificates,
+                        <p class="desc">Build new skills for that “this is my year” feeling with courses,certificates,
                             and degrees from world-class universities and companies.
                         </p>
                         <div class="cta-group">
                             <a href="./assets/icon/Play.svg" class="btn hero-see-course">See Courses</a>
-                            <button>
-                                <div class="img"></div>
+                            <button class="Watch-Video">
+                                <div class="icon"><img src="./assets/icon/Play.svg" alt=">"></div>
                                 <span>Watch Video</span>
                             </button>
                         </div>
-                        <p class="decription">Recent engagement</p>
+                        <p class="desc desc-recent">Recent engagement</p>
                         <p>
                             <strong>50K</strong> Students
                             <strong>70+</strong> Courses
-
                         </p>
                     </div>
                 </div>
