--- a/index.html
+++ b/index.html
@@ -147,6 +147,80 @@
                         </button>
                     </div>
                 </div>
+
+                <div class="course-list">
+                    <div class="item">
+                        <a href="#!"><img src="./assets/img/img_1.png" alt=""></a>
+
+                        <div class="info">
+                            <div class="head">
+                                <a href="#!">
+                                    <h3 class="title">Basic web design</h3>
+                                </a>
+                                <div class="rating">
+                                    <img src="./assets/icon/Star.svg" alt="">
+                                    <span>4.5</span>
+                                </div>
+                            </div>
+
+                            <p class="desc">Get the best course, gain knowledge
+                                and shine for your future career.</p>
+
+                            <div class="foot">
+                                <h3 class="price">$120.75</h3>
+                                <a href="" class="btn btn-buynow">Buy Now</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="item">
+                        <img src="./assets/img/img_1.png" alt="">
+
+                        <div class="info">
+                            <div class="head">
+                                <h3 class="title">UI/UX design</h3>
+                                <div class="rating">
+                                    <img src="./assets/icon/Star.svg" alt="">
+                                    <span>4.5</span>
+                                </div>
+                            </div>
+
+                            <p class="desc">Get the best course, gain knowledge
+                                and shine for your future career.</p>
+
+                            <div class="foot">
+                                <h3 class="price">$120.75</h3>
+                                <a href="" class="btn btn-buynow">Buy Now</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <div class="item">
+                        <img src="./assets/img/img_1.png" alt="">
+
+                        <div class="info">
+                            <div class="head">
+                                <h3 class="title">Web App design</h3>
+                                <div class="rating">
+                                    <img src="./assets/icon/Star.svg" alt="">
+                                    <span>4.5</span>
+                                </div>
+                            </div>
+
+                            <p class="desc">Get the best course, gain knowledge <br> and shine for your future career.
+                            </p>
+
+                            <div class="foot">
+                                <h3 class="price">$120.75</h3>
+                                <a href="" class="btn btn-buynow">Buy Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
