--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                 </div>
                             </div>
 
-                            <p class="desc">Get the best course, gain knowledge <br> and shine for your future career.
+                            <p class="desc">Get the best course, gain knowledge and shine for your future career.
                             </p>
 
                             <div class="foot">
