--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
                                 </div>
                             </div>
 
-                            <p class="desc">Get the best course, gain knowledge
-                                and shine for your future career.</p>
+                            <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
 
                             <div class="foot">
                                 <h3 class="price">$120.75</h3>
@@ -176,7 +175,7 @@
 
 
                     <div class="item">
-                        <img src="./assets/img/img_1.png" alt="">
+                        <img src="./assets/img/img_2.png" alt="">
 
                         <div class="info">
                             <div class="head">
@@ -200,7 +199,7 @@
 
 
                     <div class="item">
-                        <img src="./assets/img/img_1.png" alt="">
+                        <img src="./assets/img/img_3.png" alt="">
 
                         <div class="info">
                             <div class="head">
@@ -218,6 +217,33 @@
                                 <h3 class="price">$120.75</h3>
                                 <a href="" class="btn btn-buynow">Buy Now</a>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- -----------feedback--------- -->
+        <div class="feedback">
+            <div class="main-content">
+                <div class="feedback-list">
+                    <div class="feedback-item">
+                        <!-- ---------ben trai--------- -->
+                        <div class="info">
+                            <img src="./assets/img/avt-1.png" alt="" class="avatar">
+                            <p class="name">Peter Moor</p>
+                            <p class="desc">Student of Web Design</p>
+                            <div class="dots">
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                            </div>
+                        </div>
+
+                        <div class="content">
+                            <img src="./assets/icon/Vector.svg" alt="" class="open-quote">
+                            <blockquote>Not only does my resume look impressive—filled with the names and logos of
+                                world-class institutions—but these certificates also bring me closer to my career goals
+                                by validating the skills I've learned." </blockquote>
                         </div>
                     </div>
                 </div>
