--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
         <div class="feedback">
             <div class="main-content">
                 <div class="feedback-list">
+                    <!-- -------item1--------- -->
                     <div class="feedback-item">
                         <!-- ---------ben trai--------- -->
                         <div class="info">
@@ -233,9 +234,53 @@
                             <p class="name">Peter Moor</p>
                             <p class="desc">Student of Web Design</p>
                             <div class="dots">
+                                <span class="dot active"></span>
                                 <span class="dot"></span>
                                 <span class="dot"></span>
+                            </div>
+                        </div>
+
+                        <div class="content">
+                            <img src="./assets/icon/Vector.svg" alt="" class="open-quote">
+                            <blockquote>Not only does my resume look impressive—filled with the names and logos of
+                                world-class institutions—but these certificates also bring me closer to my career goals
+                                by validating the skills I've learned." </blockquote>
+                        </div>
+                    </div>
+
+                    <!-- -------item2--------- -->
+                    <div class="feedback-item">
+                        <!-- ---------ben trai--------- -->
+                        <div class="info">
+                            <img src="./assets/img/avt-2.jpg" alt="" class="avatar">
+                            <p class="name">Peter Moor</p>
+                            <p class="desc">Student of Web Design</p>
+                            <div class="dots">
                                 <span class="dot"></span>
+                                <span class="dot active"></span>
+                                <span class="dot"></span>
+                            </div>
+                        </div>
+
+                        <div class="content">
+                            <img src="./assets/icon/Vector.svg" alt="" class="open-quote">
+                            <blockquote>Not only does my resume look impressive—filled with the names and logos of
+                                world-class institutions—but these certificates also bring me closer to my career goals
+                                by validating the skills I've learned." </blockquote>
+                        </div>
+                    </div>
+
+                    <!-- -------item3--------- -->
+                    <div class="feedback-item">
+                        <!-- ---------ben trai--------- -->
+                        <div class="info">
+                            <img src="./assets/img/avt-3.jpg" alt="" class="avatar">
+                            <p class="name">Peter Moor</p>
+                            <p class="desc">Student of Web Design</p>
+                            <div class="dots">
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot active"></span>
                             </div>
                         </div>
 
@@ -249,7 +294,26 @@
                 </div>
             </div>
         </div>
-    </main>
+        <!-- ---------------features---------------- -->
+        <div class="features">
+            <div class="main-content">
+                <div class="body">
+                    <div class="images">
+                        <img class="lower" src="./assets/img/learn-1.jpg"
+                            alt="Learner outcomes through our awesome platform">
+                        <img src="./assets/img/learn-2.jpg" alt="Learner outcomes through our awesome platform">
+                    </div>
+
+                    <div class="text">
+                        <h2 class="heading-lv2">Learner outcomes through our awesome platform</h2>
+                        <p class="desc">87% of people learning for professional development report career benefits like
+                            getting a promotion, a raise, or starting a new career.</p>
+                        <p class="desc">Lesson Impact Report (2022)</p>
+                        <a href="" class="btn fea-btn">Sign up</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 </body>
 
 </html>
