--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 </div>
             </div>
         </div>
-        <!-- ---------------features---------------- -->
+        <!-- ---------------features1---------------- -->
         <div class="features">
             <div class="main-content">
                 <div class="body">
@@ -310,6 +310,26 @@
                             getting a promotion, a raise, or starting a new career.</p>
                         <p class="desc">Lesson Impact Report (2022)</p>
                         <a href="" class="btn fea-btn">Sign up</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- ---------------features2---------------- -->
+        <div class="features features-2">
+            <div class="main-content">
+                <div class="body">
+                    <div class="text">
+                        <h2 class="heading-lv2">Take the next step toward your personal and professional goals with
+                            Lesson.</h2>
+                        <p class="desc">Take the next step toward. Join now to receive personalized and more
+                            recommendations from the full Coursera catalog.</p>
+                        <a href="" class="btn fea-btn">Join Now</a>
+                    </div>
+
+                    <div class="images">
+                        <img class="learn-one" src="./assets/img/learn-3.jpg" alt="Take the next step toward your personal and professional goals with
+                        Lesson.">
                     </div>
                 </div>
             </div>
