--- a/index.html
+++ b/index.html
@@ -334,6 +334,56 @@
                 </div>
             </div>
         </div>
+        <!-- -----------------blog---------------- -->
+        <div class="blog">
+            <div class="main-content">
+                <div class="blog-top">
+                    <h2 class="heading-lv2">Our blog</h2>
+                    <p class="desc">Read our regular travel blog and know the latest update of tour and travel</p>
+                </div>
+
+                <div class="blog-content">
+                    <div class="item">
+                        <img src="./assets/img/study-1.jpg"
+                            alt="How to become a pro web designer in 2022 and get remot job?">
+                        <div class="info">
+                            <p class="desc">21 November 2021</p>
+                            <div class="rectangle"></div>
+                            <p class="question">How to become a pro web designer in 2022 and get remot job?</p>
+                            <a href="#!" class="btn btn-read">Read More</a>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img src="./assets/img/study-2.jpg"
+                            alt="How to become a pro web designer in 2022 and get remot job?">
+                        <div class="info">
+                            <p class="desc">21 November 2021</p>
+                            <div class="rectangle"></div>
+                            <p class="question">How to become a pro web designer in 2022 and get remot job?</p>
+                            <a href="#!" class="btn btn-read">Read More</a>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <img src="./assets/img/study-3.jpg"
+                            alt="How to become a pro web designer in 2022 and get remot job?">
+                        <div class="info">
+                            <p class="desc">21 November 2021</p>
+                            <div class="rectangle"></div>
+                            <p class="question">How to become a pro web designer in 2022 and get remot job?</p>
+                            <a href="#!" class="btn btn-read">Read More</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="dots">
+                    <span class="dot"></span>
+                    <span class="dot active"></span>
+                    <span class="dot"></span>
+                </div>
+            </div>
+        </div>
 </body>
 
 </html>
