--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
                 </div>
 
                 <div class="blog-content">
+                    <!-- -------item-1------- -->
                     <div class="item">
                         <img src="./assets/img/study-1.jpg"
                             alt="How to become a pro web designer in 2022 and get remot job?">
@@ -353,7 +354,7 @@
                             <a href="#!" class="btn btn-read">Read More</a>
                         </div>
                     </div>
-
+                    <!-- -------item-2------- -->
                     <div class="item">
                         <img src="./assets/img/study-2.jpg"
                             alt="How to become a pro web designer in 2022 and get remot job?">
@@ -364,7 +365,75 @@
                             <a href="#!" class="btn btn-read">Read More</a>
                         </div>
                     </div>
+                    <!-- -------item-3------- -->
+                    <div class="item">
+                        <img src="./assets/img/study-3.jpg"
+                            alt="How to become a pro web designer in 2022 and get remot job?">
+                        <div class="info">
+                            <p class="desc">21 November 2021</p>
+                            <div class="rectangle"></div>
+                            <p class="question">How to become a pro web designer in 2022 and get remot job?</p>
+                            <a href="#!" class="btn btn-read">Read More</a>
+                        </div>
+                    </div>
 
+                    <!-- -------item-4------- -->
+                    <div class="item">
+                        <img src="./assets/img/study-1.jpg"
+                            alt="How to become a pro web designer in 2022 and get remot job?">
+                        <div class="info">
+                            <p class="desc">21 November 2021</p>
+                            <div class="rectangle"></div>
+                            <p class="question">How to become a pro web designer in 2022 and get remot job?</p>
+                            <a href="#!" class="btn btn-read">Read More</a>
+                        </div>
+                    </div>
+                    <!-- -------item-5------- -->
+                    <div class="item">
+                        <img src="./assets/img/study-2.jpg"
+                            alt="How to become a pro web designer in 2022 and get remot job?">
+                        <div class="info">
+                            <p class="desc">21 November 2021</p>
+                            <div class="rectangle"></div>
+                            <p class="question">How to become a pro web designer in 2022 and get remot job?</p>
+                            <a href="#!" class="btn btn-read">Read More</a>
+                        </div>
+                    </div>
+                    <!-- -------item-6------- -->
+                    <div class="item">
+                        <img src="./assets/img/study-3.jpg"
+                            alt="How to become a pro web designer in 2022 and get remot job?">
+                        <div class="info">
+                            <p class="desc">21 November 2021</p>
+                            <div class="rectangle"></div>
+                            <p class="question">How to become a pro web designer in 2022 and get remot job?</p>
+                            <a href="#!" class="btn btn-read">Read More</a>
+                        </div>
+                    </div>
+
+                    <!-- -------item-7------- -->
+                    <div class="item">
+                        <img src="./assets/img/study-1.jpg"
+                            alt="How to become a pro web designer in 2022 and get remot job?">
+                        <div class="info">
+                            <p class="desc">21 November 2021</p>
+                            <div class="rectangle"></div>
+                            <p class="question">How to become a pro web designer in 2022 and get remot job?</p>
+                            <a href="#!" class="btn btn-read">Read More</a>
+                        </div>
+                    </div>
+                    <!-- -------item-8------- -->
+                    <div class="item">
+                        <img src="./assets/img/study-2.jpg"
+                            alt="How to become a pro web designer in 2022 and get remot job?">
+                        <div class="info">
+                            <p class="desc">21 November 2021</p>
+                            <div class="rectangle"></div>
+                            <p class="question">How to become a pro web designer in 2022 and get remot job?</p>
+                            <a href="#!" class="btn btn-read">Read More</a>
+                        </div>
+                    </div>
+                    <!-- -------item-9------- -->
                     <div class="item">
                         <img src="./assets/img/study-3.jpg"
                             alt="How to become a pro web designer in 2022 and get remot job?">
